--- a/docs/tutorials/prometheus.ipynb
+++ b/docs/tutorials/prometheus.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "prometheus.ipynb",
       "provenance": [],
-      "private_outputs": true,
       "collapsed_sections": [
         "Tce3stUlHN0L"
       ],
@@ -145,19 +144,103 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uUDYyMZRfkX4",
+        "id": "48B9eAMMhAgw",
         "colab_type": "code",
         "colab": {}
+      },
+      "source": [
+        "import os"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uC6nYgKdWtOc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0f720cd2-450e-41a8-87a3-9c0295b00ff9"
       },
       "source": [
         "try:\n",
         "  %tensorflow_version 2.x\n",
         "except Exception:\n",
-        "  pass\n",
+        "  pass"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "TensorFlow 2.x selected.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uUDYyMZRfkX4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 649
+        },
+        "outputId": "ab451439-5aba-4de1-d3d9-1b83ab15a0bd"
+      },
+      "source": [
         "!pip install tensorflow-io"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: tensorflow-io in /usr/local/lib/python3.6/dist-packages (0.12.0)\n",
+            "Requirement already satisfied: tensorflow<2.2.0,>=2.1.0 in /tensorflow-2.1.0/python3.6 (from tensorflow-io) (2.1.0)\n",
+            "Requirement already satisfied: opt-einsum>=2.3.2 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (3.2.0)\n",
+            "Requirement already satisfied: google-pasta>=0.1.6 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (0.1.8)\n",
+            "Requirement already satisfied: tensorflow-estimator<2.2.0,>=2.1.0rc0 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (2.1.0)\n",
+            "Requirement already satisfied: tensorboard<2.2.0,>=2.1.0 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (2.1.0)\n",
+            "Requirement already satisfied: wheel>=0.26; python_version >= \"3\" in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (0.34.2)\n",
+            "Requirement already satisfied: grpcio>=1.8.6 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (1.27.2)\n",
+            "Requirement already satisfied: astor>=0.6.0 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (0.8.1)\n",
+            "Requirement already satisfied: absl-py>=0.7.0 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (0.9.0)\n",
+            "Requirement already satisfied: termcolor>=1.1.0 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (1.1.0)\n",
+            "Requirement already satisfied: numpy<2.0,>=1.16.0 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (1.18.1)\n",
+            "Requirement already satisfied: keras-applications>=1.0.8 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (1.0.8)\n",
+            "Requirement already satisfied: protobuf>=3.8.0 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (3.11.3)\n",
+            "Requirement already satisfied: keras-preprocessing>=1.1.0 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (1.1.0)\n",
+            "Requirement already satisfied: wrapt>=1.11.1 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (1.12.0)\n",
+            "Requirement already satisfied: gast==0.2.2 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (0.2.2)\n",
+            "Requirement already satisfied: scipy==1.4.1; python_version >= \"3\" in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (1.4.1)\n",
+            "Requirement already satisfied: six>=1.12.0 in /tensorflow-2.1.0/python3.6 (from tensorflow<2.2.0,>=2.1.0->tensorflow-io) (1.14.0)\n",
+            "Requirement already satisfied: markdown>=2.6.8 in /tensorflow-2.1.0/python3.6 (from tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (3.2.1)\n",
+            "Requirement already satisfied: setuptools>=41.0.0 in /tensorflow-2.1.0/python3.6 (from tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (45.2.0)\n",
+            "Requirement already satisfied: werkzeug>=0.11.15 in /tensorflow-2.1.0/python3.6 (from tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (1.0.0)\n",
+            "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /tensorflow-2.1.0/python3.6 (from tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (0.4.1)\n",
+            "Requirement already satisfied: google-auth<2,>=1.6.3 in /tensorflow-2.1.0/python3.6 (from tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (1.11.2)\n",
+            "Requirement already satisfied: requests<3,>=2.21.0 in /tensorflow-2.1.0/python3.6 (from tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (2.23.0)\n",
+            "Requirement already satisfied: h5py in /tensorflow-2.1.0/python3.6 (from keras-applications>=1.0.8->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (2.10.0)\n",
+            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /tensorflow-2.1.0/python3.6 (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (1.3.0)\n",
+            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /tensorflow-2.1.0/python3.6 (from google-auth<2,>=1.6.3->tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (0.2.8)\n",
+            "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /tensorflow-2.1.0/python3.6 (from google-auth<2,>=1.6.3->tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (4.0.0)\n",
+            "Requirement already satisfied: rsa<4.1,>=3.1.4 in /tensorflow-2.1.0/python3.6 (from google-auth<2,>=1.6.3->tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (4.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /tensorflow-2.1.0/python3.6 (from requests<3,>=2.21.0->tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (2019.11.28)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /tensorflow-2.1.0/python3.6 (from requests<3,>=2.21.0->tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (2.9)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /tensorflow-2.1.0/python3.6 (from requests<3,>=2.21.0->tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (1.25.8)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /tensorflow-2.1.0/python3.6 (from requests<3,>=2.21.0->tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (3.0.4)\n",
+            "Requirement already satisfied: oauthlib>=3.0.0 in /tensorflow-2.1.0/python3.6 (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (3.1.0)\n",
+            "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /tensorflow-2.1.0/python3.6 (from pyasn1-modules>=0.2.1->google-auth<2,>=1.6.3->tensorboard<2.2.0,>=2.1.0->tensorflow<2.2.0,>=2.1.0->tensorflow-io) (0.4.8)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -201,7 +284,11 @@
       "metadata": {
         "id": "YUj0878jPyz7",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "2831a5e5-334c-4ec5-dfd1-11124f67f896"
       },
       "source": [
         "!curl -s -OL https://github.com/coredns/coredns/releases/download/v1.6.7/coredns_1.6.7_linux_amd64.tgz\n",
@@ -211,8 +298,19 @@
         "\n",
         "!cat Corefile"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            ".:9053 {\n",
+            "  prometheus\n",
+            "  whoami\n",
+            "}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -244,7 +342,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "2HFfTfHkWgR3",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 272
+        },
+        "outputId": "288d7abf-403a-4074-b326-f482207ec7dc"
       },
       "source": [
         "!curl -s -OL https://github.com/prometheus/prometheus/releases/download/v2.15.2/prometheus-2.15.2.linux-amd64.tar.gz\n",
@@ -254,8 +356,30 @@
         "\n",
         "!cat prometheus.yml"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "global:\n",
+            "  scrape_interval:     1s\n",
+            "  evaluation_interval: 1s\n",
+            "alerting:\n",
+            "  alertmanagers:\n",
+            "  - static_configs:\n",
+            "    - targets:\n",
+            "rule_files:\n",
+            "scrape_configs:\n",
+            "- job_name: 'prometheus'\n",
+            "  static_configs:\n",
+            "  - targets: ['localhost:9090']\n",
+            "- job_name: \"coredns\"\n",
+            "  static_configs:\n",
+            "  - targets: ['localhost:9153']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -267,11 +391,7 @@
       "source": [
         "# Run `./prometheus` as a background process.\n",
         "# IPython doesn't recognize `&` in inline bash cells.\n",
-        "get_ipython().system_raw('./prometheus &')\n",
-        "\n",
-        "# Give the server a few seconds to startup.\n",
-        "import time\n",
-        "time.sleep(60)"
+        "get_ipython().system_raw('./prometheus &')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -304,26 +424,96 @@
       "metadata": {
         "colab_type": "code",
         "id": "mrYsnIrVWgSE",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 425
+        },
+        "outputId": "ecb13725-c931-4d48-c51a-99f08e1b3783"
       },
       "source": [
         "!dig @127.0.0.1 -p 9053 demo1.example.org"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "; <<>> DiG 9.11.3-1ubuntu1.11-Ubuntu <<>> @127.0.0.1 -p 9053 demo1.example.org\n",
+            "; (1 server found)\n",
+            ";; global options: +cmd\n",
+            ";; Got answer:\n",
+            ";; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 53868\n",
+            ";; flags: qr aa rd; QUERY: 1, ANSWER: 0, AUTHORITY: 0, ADDITIONAL: 3\n",
+            ";; WARNING: recursion requested but not available\n",
+            "\n",
+            ";; OPT PSEUDOSECTION:\n",
+            "; EDNS: version: 0, flags:; udp: 4096\n",
+            "; COOKIE: 855234f1adcb7a28 (echoed)\n",
+            ";; QUESTION SECTION:\n",
+            ";demo1.example.org.\t\tIN\tA\n",
+            "\n",
+            ";; ADDITIONAL SECTION:\n",
+            "demo1.example.org.\t0\tIN\tA\t127.0.0.1\n",
+            "_udp.demo1.example.org.\t0\tIN\tSRV\t0 0 45361 .\n",
+            "\n",
+            ";; Query time: 0 msec\n",
+            ";; SERVER: 127.0.0.1#9053(127.0.0.1)\n",
+            ";; WHEN: Tue Mar 03 22:35:20 UTC 2020\n",
+            ";; MSG SIZE  rcvd: 132\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
         "id": "5APx3wD6WgSH",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 425
+        },
+        "outputId": "1420f89a-3b3e-43e1-ccfd-3523ffea98e5"
       },
       "source": [
         "!dig @127.0.0.1 -p 9053 demo2.example.org"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "; <<>> DiG 9.11.3-1ubuntu1.11-Ubuntu <<>> @127.0.0.1 -p 9053 demo2.example.org\n",
+            "; (1 server found)\n",
+            ";; global options: +cmd\n",
+            ";; Got answer:\n",
+            ";; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 53163\n",
+            ";; flags: qr aa rd; QUERY: 1, ANSWER: 0, AUTHORITY: 0, ADDITIONAL: 3\n",
+            ";; WARNING: recursion requested but not available\n",
+            "\n",
+            ";; OPT PSEUDOSECTION:\n",
+            "; EDNS: version: 0, flags:; udp: 4096\n",
+            "; COOKIE: f18b2ba23e13446d (echoed)\n",
+            ";; QUESTION SECTION:\n",
+            ";demo2.example.org.\t\tIN\tA\n",
+            "\n",
+            ";; ADDITIONAL SECTION:\n",
+            "demo2.example.org.\t0\tIN\tA\t127.0.0.1\n",
+            "_udp.demo2.example.org.\t0\tIN\tSRV\t0 0 42194 .\n",
+            "\n",
+            ";; Query time: 0 msec\n",
+            ";; SERVER: 127.0.0.1#9053(127.0.0.1)\n",
+            ";; WHEN: Tue Mar 03 22:35:21 UTC 2020\n",
+            ";; MSG SIZE  rcvd: 132\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -354,11 +544,16 @@
       "metadata": {
         "id": "h21RdP7meGzP",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        },
+        "outputId": "9098c009-fdaf-4fbc-dfbc-d9b7c81b5509"
       },
       "source": [
         "dataset = tfio.experimental.IODataset.from_prometheus(\n",
-        "    \"coredns_dns_request_count_total\", 5, endpoint=\"http://localhost:9090\")\n",
+        "      \"coredns_dns_request_count_total\", 5, endpoint=\"http://localhost:9090\")\n",
+        "\n",
         "\n",
         "print(\"Dataset Spec:\\n{}\\n\".format(dataset.element_spec))\n",
         "\n",
@@ -368,8 +563,24 @@
         "  time = datetime.fromtimestamp(time // 1000)\n",
         "  print(\"{}: {}\".format(time, value['coredns']['localhost:9153']['coredns_dns_request_count_total']))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Dataset Spec:\n",
+            "(TensorSpec(shape=(), dtype=tf.int64, name=None), {'coredns': {'localhost:9153': {'coredns_dns_request_count_total': TensorSpec(shape=(), dtype=tf.float64, name=None)}}})\n",
+            "\n",
+            "CoreDNS Time Series:\n",
+            "2020-03-03 22:35:17: 2.0\n",
+            "2020-03-03 22:35:18: 2.0\n",
+            "2020-03-03 22:35:19: 2.0\n",
+            "2020-03-03 22:35:20: 2.0\n",
+            "2020-03-03 22:35:21: 2.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -408,11 +619,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5CA3JUIkduY5",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note: This cell may error out the first time you run it. Run it again and it will pass ."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "qCoueXYZOvqZ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "1aa9c298-ce91-4055-a96c-3e2f180a5cde"
       },
       "source": [
         "dataset = tfio.experimental.IODataset.from_prometheus(\n",
@@ -427,8 +652,21 @@
         "      value['coredns']['localhost:9153']['go_memstats_gc_sys_bytes'],\n",
         "      value['prometheus']['localhost:9090']['go_memstats_gc_sys_bytes']))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Time Series CoreDNS/Prometheus Comparision:\n",
+            "2020-03-03 22:35:17: 2385920.0/2775040.0\n",
+            "2020-03-03 22:35:18: 2385920.0/2775040.0\n",
+            "2020-03-03 22:35:19: 2385920.0/2775040.0\n",
+            "2020-03-03 22:35:20: 2385920.0/2775040.0\n",
+            "2020-03-03 22:35:21: 2385920.0/2775040.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -490,7 +728,11 @@
       "metadata": {
         "id": "CZmStrvFvJLN",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "8ae7f0e6-88a9-4c09-8bec-b294856174e5"
       },
       "source": [
         "n_samples = 10\n",
@@ -522,8 +764,38 @@
         "# pass the final dataset to model.fit for training\n",
         "simple_lstm_model.fit(dataset.batch(1).repeat(10),  epochs=5, steps_per_epoch=10)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train for 10 steps\n",
+            "Epoch 1/5\n",
+            "10/10 [==============================] - 2s 150ms/step - loss: 0.8484\n",
+            "Epoch 2/5\n",
+            "10/10 [==============================] - 0s 10ms/step - loss: 0.7808\n",
+            "Epoch 3/5\n",
+            "10/10 [==============================] - 0s 10ms/step - loss: 0.7102\n",
+            "Epoch 4/5\n",
+            "10/10 [==============================] - 0s 11ms/step - loss: 0.6359\n",
+            "Epoch 5/5\n",
+            "10/10 [==============================] - 0s 11ms/step - loss: 0.5572\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7f1758f3da90>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "markdown",
