[tutorials] modify tfio version in notebooks (#1160)
* modify tfio version in notebooks

* lint fixes

* Prefer not to mix python in into `!` cells.

* Prefer not to mix python in into `!` cells.

Co-authored-by: Mark Daoust <markdaoust@google.com>

--- a/docs/tutorials/elasticsearch.ipynb
+++ b/docs/tutorials/elasticsearch.ipynb
@@ -107,10 +107,7 @@
       },
       "outputs": [],
       "source": [
-        "print(\"Installing the tensorflow-io-nightly package !\")\n",
-        "!pip install tensorflow-io-nightly\n",
-        "\n",
-        "print(\"Installing the elasticsearch package !\")\n",
+        "!pip install tensorflow-io\n",
         "!pip install elasticsearch\n"
       ]
     },
