--- a/docs/tutorials/kafka.ipynb
+++ b/docs/tutorials/kafka.ipynb
@@ -103,10 +103,7 @@
       },
       "outputs": [],
       "source": [
-        "print(\"Installing the tensorflow-io-nightly package !\")\n",
-        "!pip install tensorflow-io-nightly\n",
-        "\n",
-        "print(\"Installing the kafka-python package !\")\n",
+        "!pip install tensorflow-io\n",
         "!pip install kafka-python"
       ]
     },
