[notebooks] sanity changes before publishing to site (#1169)
* [notebooks] bug fixes before publishing to site

* update batch_size and buffer_size

--- a/docs/tutorials/elasticsearch.ipynb
+++ b/docs/tutorials/elasticsearch.ipynb
@@ -129,7 +129,6 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "from subprocess import Popen, PIPE, STDOUT\n",
         "import time\n",
         "from sklearn.model_selection import train_test_split\n",
         "from elasticsearch import Elasticsearch\n",
@@ -207,10 +206,19 @@
       },
       "outputs": [],
       "source": [
-        "es_server = Popen(['elasticsearch-7.9.2/bin/elasticsearch'], \n",
-        "                  stdout=PIPE, stderr=STDOUT,\n",
-        "                  preexec_fn=lambda: os.setuid(1))\n",
+        "%%bash --bg\n",
         "\n",
+        "sudo -H -u daemon elasticsearch-7.9.2/bin/elasticsearch"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "XyUa9r6MgWtW"
+      },
+      "outputs": [],
+      "source": [
         "# Sleep for few seconds to let the instance start.\n",
         "time.sleep(20)"
       ]
