--- a/docs/tutorials/kafka.ipynb
+++ b/docs/tutorials/kafka.ipynb
@@ -550,7 +550,7 @@
         "OPTIMIZER=\"adam\"\n",
         "LOSS=tf.keras.losses.BinaryCrossentropy(from_logits=True)\n",
         "METRICS=['accuracy']\n",
-        "EPOCHS=20\n"
+        "EPOCHS=10\n"
       ]
     },
     {
@@ -597,7 +597,7 @@
       "outputs": [],
       "source": [
         "# fit the model\n",
-        "model.fit(train_ds, epochs=10)"
+        "model.fit(train_ds, epochs=EPOCHS)"
       ]
     },
     {
@@ -608,7 +608,7 @@
       "source": [
         "Note: Please do not confuse the training step with online training. It's an entirely different paradigm which will be covered in a later section.\n",
         "\n",
-        "Since only a fraction of the dataset is being utilized, our accuracy is limited to ~78% during the training phase. However, please feel free to store additional data in kafka for better a model performance. Also, since the goal was to just demonstrate the functionality of the tfio kafka datasets, a smaller and less-complicated neural network was used. However, one can increase the complexity of the model, modify the learning strategy, tune hyper-parameters etc for exploration purposes. For a baseline approach, please refer to this [article](https://www.nature.com/articles/ncomms5308#Sec11)."
+        "Since only a fraction of the dataset is being utilized, our accuracy is limited to ~78% during the training phase. However, please feel free to store additional data in kafka for a better model performance. Also, since the goal was to just demonstrate the functionality of the tfio kafka datasets, a smaller and less-complicated neural network was used. However, one can increase the complexity of the model, modify the learning strategy, tune hyper-parameters etc for exploration purposes. For a baseline approach, please refer to this [article](https://www.nature.com/articles/ncomms5308#Sec11)."
       ]
     },
     {
@@ -844,9 +844,9 @@
         "thread.start()\n",
         "\n",
         "for mini_ds in online_train_ds:\n",
-        "  mini_ds = mini_ds.shuffle(buffer_size=SHUFFLE_BUFFER_SIZE)\n",
+        "  mini_ds = mini_ds.shuffle(buffer_size=32)\n",
         "  mini_ds = mini_ds.map(decode_kafka_online_item)\n",
-        "  mini_ds = mini_ds.batch(BATCH_SIZE)\n",
+        "  mini_ds = mini_ds.batch(32)\n",
         "  model.fit(mini_ds, epochs=3)\n"
       ]
     },
